# upd-builder

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: basic_usage.py  sample.yaml  with_yaml.py
src/upd_builder/: __init__.py  upd_xml.py
tests/: __init__.py  test_upd_builder.py
